--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 		type="text/css" />
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
 	<link rel="stylesheet" href="assets/css/style.css" type="text/css" />
-	<title>António - Ceramic</title>
+	<title>FiGO Group AB</title>
 </head>
 
 <body>
 	<!---------------navbar--------------->
 	<nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-		<a class="navbar-brand" href="#home">antónio
-			<h6 class="navbar-subtitle">ceramic</h6></a>
+		<a class="navbar-brand" href="#home">FiGO
+			<h6 class="navbar-subtitle">Group AB</h6></a>
 		<button
         class="navbar-toggler"
         type="button"
