--- a/index.html
+++ b/index.html
@@ -88,6 +88,14 @@
 	</section>
 	<!---------------.about end--------------->
 
+	<!---------------home--------------->
+	<section class="container-fluid container-home" id="home">
+		<div class="row">
+			<div class="col"></div>
+		</div>
+	</section>
+	<!---------------.home end--------------->
+
 	<!---------------contact--------------->
 	<section class="container-fluid container-contact" id="contact">
 		<div class="row">
