--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 	<!---------------.about end--------------->
 
 	<!---------------home--------------->
-	<section class="container-fluid container-home" id="home">
+	<section class="container-fluid container-new">
 		<div class="row">
 			<div class="col"></div>
 		</div>
